# Ubuntu_CPP_Project

./: README.md
voronoi_segmentation/: CMakeLists.txt  package.xml
voronoi_segmentation/common/include/ipa_room_segmentation/: abstract_voronoi_segmentation.h  contains.h  voronoi_segmentation.h
voronoi_segmentation/common/src/: abstract_voronoi_segmentation.cpp  contains.cpp  room_class.cpp  voronoi_segmentation.cpp
voronoi_segmentation/include/: voronoi_segmentation_function.h
voronoi_segmentation/include/cgal/: CgalVoronoi.h
voronoi_segmentation/src/: VoriGraph.cpp  voronoi_segmentation_function.cpp
voronoi_segmentation/src/cgal/: CgalVoronoi.cpp
voronoi_segmentation/src/qt/: QImageVoronoi.cpp
voronoi_segmentation/test/: voronoi_segmentation_node.cpp
